testdata/typechecker/ok/multidim/Multi1.java
int main() {
		int[][] arr;
		arr = new int[2][0];
		int[] b;
		b = new int[8];
		arr[0] = b;
		printInt(arr[0][0]);
		return 0;
}

