testdata/typechecker/error/arrays/ArrayTest-err2.java
int main() {
            int[] b;
            boolean c;
            b = new int[4]; 
            c = b[2]; // TE
		return 0;
}

